Correct Css mistake to align properly
git-svn-id: http://svn.a2billing.net/svn/asterisk2billing/trunk@1936 9d51a8f0-6521-42ea-932e-d822aa02ce2f

--- a/admin/Public/templates/default/css/main.css
+++ b/admin/Public/templates/default/css/main.css
@@ -496,8 +496,8 @@ SPAN.errorText {
 	padding-right: 0px;
 	padding-left: 0px;
 	padding-bottom: 0px;
-	margin: 0px;
-	width: 100%;
+	margin: 0px auto;
+	width: 400px;
 	padding-top: 0px;
 	background-color: #f6f6f6;
 }
@@ -1290,8 +1290,9 @@ SPAN.errorText {
   background-position:bottom;  
   margin-bottom: 1em;
   color: #BD2A15;
-  margin-right: 55px;  
-  margin-left: 55px;
+  margin-right: auto;  
+  margin-left: auto;
+  width:80%;
 }
 .tablebackgroundcamel
 {	
